--- a/about_us.html
+++ b/about_us.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html>
-<head>
-  <title>About Us</title>
-  <link rel="stylesheet" href="css/style.css" />
-</head>
-<body>
-<center><h1 style="color:blue;">About Us</h1></center>
+  <head>
+    <title>About Us</title>
+    <link rel="stylesheet" href="css/style.css" />
+  </head>
+  <body>
+   <center><h1 class="h1" ;">About Us</h1></center>
 
 
-</body>
+  </body>
 </html>
